Assistant checkpoint: Add mobile support to Pong game
Assistant generated file changes:
- public/index.html: Add mobile-friendly meta tags and touch handling
- public/game.js: Add touch controls for mobile

---

User prompt:

Make pong multiplayer game for phone users

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pong Multiplayer</title>
     <style>
         body {
@@ -13,10 +13,14 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            touch-action: none;
+            overflow: hidden;
         }
         canvas {
             border: 2px solid #fff;
             background: #000;
+            max-width: 100%;
+            max-height: 100vh;
         }
     </style>
     <script src="/socket.io/socket.io.js"></script>
