--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
         canvas {
             border: 2px solid #fff;
             background: #000;
-            max-width: 100%;
-            max-height: 100vh;
+            width: 100%;
+            height: 100vh;
+            display: block;
         }
     </style>
     <script src="/socket.io/socket.io.js"></script>
