--- a/public/index.html
+++ b/public/index.html
@@ -6,28 +6,37 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Pong Multiplayer</title>
     <style>
+        * { margin: 0; padding: 0; }
         body {
-            margin: 0;
             background: #000;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
+            width: 100vw;
             touch-action: none;
             overflow: hidden;
         }
-        canvas {
-            border: 2px solid #fff;
+        #gameCanvas {
             background: #000;
-            width: 100%;
-            height: 100vh;
-            display: block;
+            border: 2px solid #fff;
+            max-width: 100%;
+            max-height: 100vh;
+            object-fit: contain;
+        }
+        #playerInfo {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            color: white;
+            font-family: Arial, sans-serif;
         }
     </style>
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
-    <canvas id="gameCanvas" width="800" height="400"></canvas>
+    <div id="playerInfo">Connecting...</div>
+    <canvas id="gameCanvas"></canvas>
     <script src="game.js"></script>
 </body>
 </html>
